--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,22 +38,23 @@ services:
       - trino-network
 
   minio:
-    hostname: minio
-    image: 'minio/minio:RELEASE.2021-01-08T21-18-21Z'
+    image: quay.io/minio/minio
     container_name: minio
     ports:
-      - '9095:9000'
-    volumes:
-      - minio-data:/data
+      - "9000:9000"
+      - "9001:9001"
     environment:
-      MINIO_ACCESS_KEY: minio_access_key
-      MINIO_SECRET_KEY: minio_secret_key
-    command: server /data
+      MINIO_ROOT_USER: minio_access_key
+      MINIO_ROOT_PASSWORD: minio_secret_key
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
     networks:
       - trino-network
 
+
 volumes:
-  minio-data:
+  minio_data:
     driver: local
 
 networks:
