--- a/etc/catalog/iceberg.properties
+++ b/etc/catalog/iceberg.properties
@@ -1,4 +1,5 @@
 connector.name=iceberg
+iceberg.catalog.type=hive_metastore
 hive.metastore.uri=thrift://hive-metastore:9083
 hive.s3.path-style-access=true
 hive.s3.endpoint=http://minio:9000
