--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   trino:
-    image: 'trinodb/trino:latest'
+    image: 'trinodb/trino:452'
     container_name: trino
     hostname: trino
     ports:
